# ray_tracer_challenge

./: Cargo.toml  JOURNAL.md  README.md
examples/: clock.rs  matrices.rs  projectile.rs  sphere.rs  transformations.rs
features/: camera.feature  colors.feature  intersections.feature  materials.feature  matrices.feature  planes.feature  rays.feature  shapes.feature  spheres.feature  transformations.feature  tuples.feature  world.feature
src/: canvas.rs  color.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  models.rs  objects.rs  physics.rs
src/math/: transforms.rs
tests/: cucumber.rs
