[package]
name = "ray_tracer_challenge"
version = "0.1.0"
authors = ["JC Holder <jc.holder@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
gherkin = { package = "gherkin_rust", version = "^0.6.0" }
cucumber = { package = "cucumber_rust", version = "0.6.5" }
